<resources>
    <string name="app_name">Material Tabs</string>

    <string name="action_settings">Settings</string>

    <string name="one">Dashboards</string>
    <string name="two">Alertes</string>
    <string name="btn_custom_icon_tabs">Custom View Icon &amp; Text</string>
    <string name="title_activity_custom_view_icon_text_tabs">Custom View Icon &amp; Text</string>

    <string name="three">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">App Developement hazem</string>
    <string name="cardview_contents">This</string>
    <string name="cardview_radius_seekbar_text">Radius</string>
    <string name="cardview_elevation_seekbar_text">Elevation</string>
    <string name="hint_full_name">XX/XX</string>
    <string name="server_1">Server 1</string>
    <string name="server_2">Server 2</string>
    <string name="Middleware_1">Middleware 1</string>
    <string name="Middleware_2">Middleware 1</string>
    <string name="softaware_1">Softaware 1</string>
    <string name="softaware_2">Softaware 2</string>
    <string name="lorem_ipsum">Lorem ipsum \n\ndolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure</string>
    <string name="check_to_pass">I accept terms and conditions.</string>
    <string name="error_message">Please accept terms and conditions first.</string>
    <string name="launch_intro_activity">Launch intro activity</string>
    <string name="order_id_mock" translatable="false">Phenix</string>
    <string name="order_id_mock_2" translatable="false">Phenix 2</string>
    <string name="price_mock" translatable="false"></string>
    <string name="requests_count_mock" translatable="false">50%</string>
    <string name="requests_count_badge" translatable="false">RAM</string>
    <string name="weight_mock" translatable="false">40%</string>
    <string name="weight_badge" translatable="false">DISK</string>
    <string name="pledge_mock" translatable="false">15%</string>
    <string name="pledge_badge" translatable="false">CPU</string>
    <string name="sender_badge" translatable="false">SERVERS CLIENT</string>
    <string name="client_name_mock" translatable="false">Webserver</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">SERVERS</string>
    <string name="to_badge" translatable="false"></string>
    <string name="delivery_date_badge" translatable="false"></string>
    <string name="delivery_time_mock" translatable="false">NODE-2</string>
    <string name="delivery_date_mock" translatable="false"></string>
    <string name="deadline_badge" translatable="false"></string>
    <string name="deadline_time_mock" translatable="false">NODE-3</string>
    <string name="request_btn_text" translatable="false">REQUEST >>></string>
    <string name="btn_annotation_mock" translatable="false">5 personnes sont connetées</string>
    <string name="content_from1_mock">NODE-0</string>
    <string name="content_from2_mock"></string>
    <string name="content_to1_mock">NODE-1</string>
    <string name="content_to2_mock"></string>
    <string name="title_activity_main2">Main2Activity</string>




    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
</resources>
