<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >
        <android.support.v7.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:elevation="200dp"
            card_view:cardBackgroundColor="@color/cardview_initial_background"
            card_view:cardCornerRadius="8dp"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="10dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/textView_server"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="Servers"
                    android:textSize="22dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_ser_1"
                    android:layout_width="130dp"
                    android:layout_height="56dp"
                    android:layout_column="0"
                    android:layout_marginBottom="10dp"
                    android:layout_row="1"
                    android:gravity="bottom|center"
                    android:text="@string/server_1" />

                <ImageView
                    android:id="@+id/imageView_ser_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="10dp"
                    android:src="@android:drawable/presence_online" />

                <TextView
                    android:id="@+id/textView_ser_2"
                    android:layout_width="130dp"
                    android:layout_height="63dp"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_row="2"
                    android:gravity="top|center"
                    android:text="@string/server_2" />

                <ImageView
                    android:id="@+id/imageView_ser_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginTop="10dp"
                    android:src="@android:drawable/presence_online" />

            </GridLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:elevation="200dp"
            card_view:cardBackgroundColor="@color/cardview_initial_background"
            card_view:cardCornerRadius="8dp"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginBottom="40dp"
            >

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_midd_1"
                    android:layout_width="130dp"
                    android:layout_height="56dp"
                    android:layout_column="0"
                    android:layout_marginBottom="10dp"
                    android:layout_row="1"
                    android:gravity="bottom|center"
                    android:text="@string/Middleware_1" />

                <ImageView
                    android:id="@+id/imageView_midd_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="10dp"
                    android:src="@android:drawable/ic_notification_overlay" />

                <TextView
                    android:id="@+id/textView_midd_2"
                    android:layout_width="130dp"
                    android:layout_height="63dp"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_row="2"
                    android:gravity="top|center"
                    android:text="@string/Middleware_2" />

                <ImageView
                    android:id="@+id/imageView_midd_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginTop="10dp"
                    android:src="@android:drawable/presence_online" />

            </GridLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_midd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="Middlewares"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview3"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:elevation="200dp"
            card_view:cardBackgroundColor="@color/cardview_initial_background"
            card_view:cardCornerRadius="8dp"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            >

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_soft_1"
                    android:layout_width="130dp"
                    android:layout_height="56dp"
                    android:layout_column="0"
                    android:layout_marginBottom="10dp"
                    android:layout_row="1"
                    android:gravity="bottom|center"
                    android:text="@string/softaware_1" />

                <ImageView
                    android:id="@+id/imageView_soft_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="10dp"
                    android:src="@android:drawable/presence_online" />

                <TextView
                    android:id="@+id/textView_soft_2"
                    android:layout_width="130dp"
                    android:layout_height="63dp"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_row="2"
                    android:gravity="top|center"
                    android:text="@string/softaware_2" />

                <ImageView
                    android:id="@+id/imageView_soft_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginTop="10dp"
                    android:src="@android:drawable/presence_online" />

            </GridLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_soft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="Softwares"
                    android:textSize="22dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>